# haskell-src-exts-qq

./: .travis.yml  LICENSE  README.md  haskell-src-exts-qq.cabal  stack.yaml
Language/Haskell/Exts/: QQ.hs  Translate.hs
tests/: test.hs
