Name:           haskell-src-exts-qq
Version:        0.1
Author:         Mathieu Boespflug
Maintainer:     Mathieu Boespflug <mboes@tweag.net>
Synopsis:       A quasiquoter for haskell-src-exts.
Category:       Language
License:        BSD3
License-File:   LICENSE
Cabal-Version:  >= 1.8.0
Build-Type:     Simple
Tested-With:    GHC == 6.12
Build-Depends:  base >= 4, syb, template-haskell, haskell-src-exts
Extensions:     PatternGuards, TypeSynonymInstances, TemplateHaskell, CPP
Exposed-Modules: Language.Haskell.Exts.QQ
                 Language.Haskell.Exts.Translate

source-repository head
  type:     git
  location: git://github.com/mboes/haskell-src-exts-qq
